kubernetes/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: matejdjajkov/frontend
          name: frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
