kubernetes/depoyment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev 
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: matejdjajkov/backend
          name: backend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
