kubernetes/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: dev
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: "postgres:15-alpine3.18"
        ports:
        - containerPort: 5432
          name: db-port
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
