kubernetes/loadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: dev
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend
