kubernetes/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: backend
