kubernetes/service-database.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: dev
spec:
  clusterIP: None
  ports:
    - name: db
      port: 5432
      protocol: TCP
  selector:
    app: db
