kubernetes/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
